--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,18 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  ssl_mode: :disabled
+  sslverify: false
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: db/new_schema
+  username: test
+  password: pass
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
